[NML] defines the principal settings for this project

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,13 +1,15 @@
 # This file defines the principal settings for this project
 
-REPO_NAME          := My Fancy NewGRF
-GRF_ID             := \"IvB\" 01
+REPO_NAME          := Indonesian Town Names
+GRF_ID             := "\45\5B\01\01"
 
-TARGET_FILES       := mynewgrf.grf
+TARGET_FILES       := indonesian-towns.grf
+NUMBER_FILE        := number.txt
+SRC_TOWN           := sprites/towns.pnml
 
 # Uncomment those lines which are applicable
-USE_NFO := 1
-# USE_NML := 1
+# USE_NFO := 1
+USE_NML := 1
 # USE_OBJ := 1
 # USE_CAT := 1
 
@@ -20,7 +22,7 @@ SCRIPT_DIR         := scripts
 LANG_DIR           := lang
 # Add any dirs which shall be bundled in a source release additionally
 # to the dirs mentioned above.
-EXTRA_DIRS         :=
+EXTRA_DIRS         := cities
 
 # separate dirs for the nfo and pcx files (must be a subdir of 
 # or the same as the SRC_DIR )
@@ -46,6 +48,8 @@ GRF_ID_DUMMY          := {{GRF_ID}}
 REPO_REVISION_DUMMY   := {{REPO_REVISION}}
 OUTPUT_FILENAME_DUMMY := {{FILENAME}}
 GRF_MD5SUM_DUMMY      := {{GRF_MD5}}
+NUM_TOWN_DUMMY        := {{NUM_TOWN}}
+REPO_DATE_DUMMY       := {{DATE}}
 
 # List of all files which will get shipped
 # DOC_FILES = readme, changelog and license
@@ -55,4 +59,4 @@ GRF_MD5SUM_DUMMY      := {{GRF_MD5}}
 BUNDLE_FILES           = $(TARGET_FILES) $(DOC_FILES)
 
 # Files which also need cleaning:
-CLEAN_ADD             := docs/readme.txt
+CLEAN_ADD             := $(DOC_FILES) $(NUMBER_FILE) $(SRC_TOWN)
