--- a/scripts/Makefile.common
+++ b/scripts/Makefile.common
@@ -41,6 +41,7 @@ test::
 	$(_E) "Installation directory:       $(INSTALL_DIR)"
 	$(_E) "Documentation directory:      $(DOCDIR)"
 	$(_E) "Repository revision:          r$(REPO_REVISION)"
+	$(_E) "Repository date:              $(REPO_DATE)"
 	$(_E) "Current repository branch:    $(REPO_BRANCH)"
 	$(_E) "Build targets:                $(TARGET_FILES)"
 	$(_E) "Doc files:                    $(DOC_FILES)"
@@ -63,14 +64,16 @@ test::
 .SECONDARY: %.nfo %.nml %.cnfo
 .DELETE_ON_ERROR: %.cnfo
 
-%.txt: %.ptxt $(REV_FILENAME) $(MD5_FILENAME)
+%.txt: %.ptxt $(REV_FILENAME) $(MD5_FILENAME) $(NUMBER_FILE)
 	$(_E) "[TXT] $@"
 	$(_V) cat $< \
 		| sed -e "s/$(REPO_TITLE_DUMMY)/$(REPO_TITLE)/" \
 		| sed -e "s/$(GRF_ID_DUMMY)/$(GRF_ID)/" \
 		| sed -e "s/$(REPO_REVISION_DUMMY)/$(REPO_REVISION)/" \
-		| sed -e "s/$(OUTPUT_FILENAME_DUMMY)/$(OUTPUT_FILENAME)/" \
+		| sed -e "s/$(OUTPUT_FILENAME_DUMMY)/$(TARGET_FILES)/" \
 		| sed -e "s/$(GRF_MD5SUM_DUMMY)/$(shell cat $(MD5_FILENAME))/" \
+		| sed -e "s/$(NUM_TOWN_DUMMY)/$(shell cat $(NUMBER_FILE))/" \
+		| sed -e "s/$(REPO_DATE_DUMMY)/$(REPO_DATE)/" \
 		> $@
 	$(_V) [ -z "$(UNIX2DOS)" ] || $(UNIX2DOS) $(UNIX2DOS_FLAGS) $@
 
