--- a/.hgignore
+++ b/.hgignore
@@ -17,11 +17,15 @@ docs/readme.txt
 Makefile.dep
 *.REV
 *.md5
+custom_tags.txt
+parsetab.py
+number.txt
 
 # Ignore directories from bundle creation / install:
 # Has to be adjusted to the newgrf-name
 indonesian-towns*
-	
+towns.pnml
+
 #The .renum dir
 .renum
 
