Codechange: Revert the update-able files of 'Makefile framework'

--- a/Makefile.config
+++ b/Makefile.config
@@ -24,7 +24,7 @@ LANG_DIR           := lang
 # to the dirs mentioned above.
 EXTRA_DIRS         := cities
 
-# separate dirs for the nfo and pcx files (must be a subdir of 
+# separate dirs for the nfo and pcx files (must be a subdir of
 # or the same as the SRC_DIR )
 NFO_DIR            := $(SRC_DIR)/nfo
 PCX_DIR            := $(SRC_DIR)/pcx
@@ -33,7 +33,7 @@ WAV_DIR            := $(SRC_DIR)/wav
 # Documentation files:
 DOC_FILES = docs/readme.txt docs/license.txt docs/changelog.txt
 
-# file extentions which indicate plain text source files, 
+# file extentions which indicate plain text source files,
 # parsable by a text editor
 # FILE_SRC_EXTENSIONS = pnfo tnfo nml pnml tnml
 
@@ -60,3 +60,6 @@ BUNDLE_FILES           = $(TARGET_FILES) $(DOC_FILES)
 
 # Files which also need cleaning:
 CLEAN_ADD             := $(DOC_FILES) $(NUMBER_FILE) $(SRC_TOWN)
+
+#Allow to catch repository date
+REPO_DATE              = $(shell $(HG) parent --template="{date|shortdate}")
