Change: We don't need to pre process the license file

--- a/Makefile.config
+++ b/Makefile.config
@@ -59,7 +59,7 @@ REPO_DATE_DUMMY       := {{DATE}}
 BUNDLE_FILES           = $(TARGET_FILES) $(DOC_FILES)
 
 # Files which also need cleaning:
-CLEAN_ADD             := $(DOC_FILES) $(NUMBER_FILE) $(SRC_TOWN)
+CLEAN_ADD             := docs/readme.txt docs/changelog.txt $(NUMBER_FILE) $(SRC_TOWN)
 
 #Allow to catch repository date
 REPO_DATE              = $(shell $(HG) parent --template="{date|shortdate}")
