--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -3,13 +3,9 @@ $(CHANGELOG_FILE):
 	$(_E) [Generating changelog]
 	$(_V) $(shell) make_changelog.sh > $@
 
-$(SRC_DIR)/$(FILENAME_STUB).pnml: $(SRC_TOWN)
-	$(_E) "Building $@ from $<"
-
 $(NUMBER_FILE):
 	$(_E) "[Count City]"
 	$(_V) $(shell) count_town.sh $@
-
 
 $(SRC_TOWN):
 	$(_E) "Building $@"
@@ -26,3 +22,6 @@ test::
 		| sed -e "s/$(NUM_TOWN_DUMMY)/$(shell cat $(NUMBER_FILE))/" \
 		| sed -e "s/$(REPO_DATE_DUMMY)/$(REPO_DATE)/" \
 		> $@
+
+$(patsubst %.grf,%.src.dep,$(GRF_FILES)): $(SRC_TOWN)
+
