--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -3,9 +3,9 @@ $(CHANGELOG_FILE):
 	$(_E) [Generating changelog]
 	$(_V) $(shell) make_changelog.sh > $@
 
-$(NUMBER_FILE):
+$(NUMBER_FILE): $(SRC_TOWN)
 	$(_E) "[Count City]"
-	$(_V) $(shell) count_town.sh $@
+	$(_V) $(AWK) -F'*generated' '{if (($$2 * 1) < 1) next; gent+=$$2} END {print gent}' $< > $@
 
 $(SRC_TOWN):
 	$(_E) "Building $@"
